--- a/style/main.css
+++ b/style/main.css
@@ -1,3 +1,4 @@
+/*base*/
 :root{
     /* declarando variáveis */
     --azul:#2c81ff; 
@@ -12,17 +13,33 @@
 body{
     background: var(--preto);
     font-family:Arial, Helvetica, sans-serif;
-
+    color: white;
 }
 header .container{
-
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
 }
 header .logo{
+    margin-left: 6px;
     color: var(--azul);
     font-family: 'arial black';
     font-size: 40px;
 }
 header nav a{
     text-decoration: none;
-    color: antiquewhite;
+    color: rgb(218, 218, 218);
+    margin-right: 10px;
+}
+header nav a:hover{
+    color: #ffffff;
+}
+/* estilo relacionado ao conteúdo proncipal*/
+
+.anime-principal{
+    font-size: 17px;
+    background-image:url('/images/deathnote.jpg');
+    height: 600px;
+    background-size:cover;
 }
