--- a/style/main.css
+++ b/style/main.css
@@ -54,6 +54,21 @@ header nav a:hover{
 background-color: rgba(0,0,0,.50);
 border: none;
 color: white;
-padding: 15px;;
-
+padding: 15px 30px;
+margin-right: 15px;
+font-size: 17px;
+cursor: pointer;  
+/* mudando cursor ao entrar em contato com botões */
+transition: .3s ease all;
+}
+.anime-principal .descricao{
+    margin-top: 10px;
+    margin-bottom : 40px;
+}
+.botao:hover{
+    background-color: white;
+    color:black ;
+}
+.botao i{
+    margin-right: 5px;
 }
